admin census: fixing horiz scrolling when table is too big

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -1,4 +1,6 @@
 [av-admin-elcensus] {
+  overflow-x: auto;
+
   .input-group.search {
     margin-right: 10px;
   }
